# ros-leader-follower-simulation

./: CMakeLists.txt  README.md  package.xml
launch/: cw1_main_simulation.launch
msg/: B01009366LeaderInstruction.msg
scripts/: go_to_target_server.py  move_leader.py  move_spiral.py  move_straight.py  set_random_bg.py  set_up_environment.py  sim.py  spawn_turtles.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
