<?xml version="1.0"?>
<package format="2">

  <name>com760cw1_B01009366</name>
  <version>0.0.0</version>
  <description>Leader-follower turtlesim project using ROS and TF</description>

  <maintainer email="roshin@todo.todo">roshin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
